--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -17,7 +17,10 @@
       "applicationUrl": "https://localhost:7129;http://localhost:5272",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+
+      "justMyCode": true,
+      "requireExactSource": false
     }
   }
 }
