--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Mysql":"Server=localhost;Database=minimal_api;User=root;Password=wes101520;" //string de conexão
+  },
+
+  "editor.quickSuggestions": {
+  "other": false,
+  "comments": false,
+  "strings": false
+}
 }
