Implementa autenticação JWT e adiciona modelo de resposta para login de administrador

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,11 @@
     "Mysql":"Server=localhost;Database=minimal_api;User=root;Password=wes101520;" //string de conexão
   },
 
+  "Jwt": {
+    "Key":"Minha_Chave_Super_Secreta_De_Seguranca_Com_Mais_De_32_Caracteres" //chave secreta para gerar o token
+    
+  },
+
   "editor.quickSuggestions": {
   "other": false,
   "comments": false,
